# bids2023-hackathon

./: .env.sample  .gitignore  .python-version  LICENSE  Makefile  README.md  oscd-train.ipynb  predict-eurosat.ipynb  requirements.txt  train-eurosat.ipynb  train-rgb-eurosat.ipynb  venus-denver-with-building-model.ipynb  venus-git-over-LEFR3.ipynb
.devcontainer/: devcontainer.json
eda-venus-change-detection/: README.md  change_classifier.py  dataset.py  download.py  layers.py  requirements.txt  train.ipynb  utils.py
edagro-crop-detection/: README.md  requirements.txt  requirements.yml  sample_2018.geojson  utils.py  workflow.ipynb  workflow.py
edagro-crop-detection/data/eds/2018/: blue.nc  green.nc  nir.nc  red.nc  redege1.nc  redege2.nc  yellow.nc  (+1 more)
edagro-crop-detection/elects/: __init__.py  bavariancrops.py  train.py
edagro-crop-detection/elects/snapshots/: model.pth  model.pth.csv  model_optimizer.pth
sentinel2-modelling/: README.md  oscd-train.ipynb  predict-eurosat.ipynb  requirements.txt  train-eurosat.ipynb
stac-app/: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  requirements.txt  run_app.sh
stac-app/app/: app.py  auth.py  callbacks.py  config.py  constants.py  layers.py  layouts.py  services.py  utils.py
stac-app/app/assets/: __init__.py  button.css  img.css  leaflet.html
stac-app/app/controllers/: color.py  datacube.py  map.py  segmentation.py
stac-app/app/dal/: stac.py
stac-app/cache/: cache.db
stac-notebooks/: README.md  denver_roi.geojson  pyproject.toml  venus-denver-with-building-model.ipynb  venus-git-over-LEFR3.ipynb
(+16 files in other folders)
